--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,8 +8,21 @@
         {% endif %}
     </head>
     <body>
-        <div>cs340: <a href="/index">Home</a></div>
+        <div>cs340: 
+            <a href="{{ url_for('index') }}">Home</a>
+            <a href="{{ url_for('login') }}">Login</a>
+        </div>
         <hr>
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <ul>
+            {% for message in messages %}
+            <!--see routes.py at def login()'s flash() statement'-->
+            <li>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
+        {% endwith %}
         {% block content %}{% endblock %}
     </body>
 </html>
