basic user authentication

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,8 +3,8 @@
 
 <!--This is a basic statement with pythonvariable passthrough-->>
 {% block content %}
-<h1>Hello, {{ variable.pointer }}!</h1> 
-{% for var_store in var_stores %}
-    <div><p>{{ var_store.parameter1.pointer }} says: <b>{{ var_store.parameter2 }}</b></p></div>
+    <h1>Hi, {{ current_user.username }}!</h1>
+    {% for post in posts %}
+    <div><p>{{ post.author.username }} says: <b>{{ post.body }}</b></p></div>
     {% endfor %}
 {% endblock %}
