--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,9 +8,14 @@
         {% endif %}
     </head>
     <body>
-        <div>cs340: 
+        <div>
+            CS340:
             <a href="{{ url_for('index') }}">Home</a>
+            {% if current_user.is_anonymous %}
             <a href="{{ url_for('login') }}">Login</a>
+            {% else %}
+            <a href="{{ url_for('logout') }}">Logout</a>
+            {% endif %}
         </div>
         <hr>
         {% with messages = get_flashed_messages() %}
