--- a/app/templates/test.html
+++ b/app/templates/test.html
@@ -1,24 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-<table>
-    <thead>
-        <tr>
-            <th>ID</th>
-            <th>name</th>
-            <th>dollars</th>
-            <th>total_mf_sector</th>
-        </tr>
-    </thead>
-    <tbody> 
-    {% for result in results %}
-    <tr>
-        <td>{{result[0]}}</td>
-        <td>{{result[1]}}</td>
-        <td>{{result[2]}}</td>
-        <td>{{result[3]}}</td>
-    </tr>
-    {% endfor %}
-    </tbody>
-    </table>
+{% for result in results %}
+<div><p>{{result}}</p></div>
+{% endfor %}
+
 {% endblock %}
