--- a/app/templates/mutualFunds.html
+++ b/app/templates/mutualFunds.html
@@ -25,10 +25,12 @@
     </tbody>
 </table>
 
+{% if grow%}
 <h2>Add Mutual Funds</h2>
 <div class="row">
     <div class="col-md-4">
         {{ wtf.quick_form(form) }}
     </div>
 </div>
+{% endif %}
 {% endblock %}
