--- a/app/templates/stocks.html
+++ b/app/templates/stocks.html
@@ -26,11 +26,12 @@
         {% endif %}
     </tbody>
 </table>
-
+{% if grow%}
 <h2>Add Stock</h2>
 <div class="row">
     <div class="col-md-4">
         {{ wtf.quick_form(form) }}
     </div>
 </div>
+{% endif %}
 {% endblock %}
