--- a/app/templates/mutualFunds.html
+++ b/app/templates/mutualFunds.html
@@ -18,7 +18,7 @@
                 <td>{{  row.id  }}</td>
                 <td>{{  row.name  }}</td>
                 <td>{{  row.dollars  }}</td>
-                <td>{{  row.total_mf_sector  }}</td>
+                <td>{{  row.total_mf_sector  }}%</td>
             </tr>
         {% endfor %}
         {% endif %}
