--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,6 +18,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a href="{{ url_for('index') }}">{{ ('Home') }}</a></li>
+                    <li><a href="{{ url_for('mutualFunds') }}">{{ ('Mutual Funds') }}</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if current_user.is_anonymous %}
