--- a/app/templates/mutualFunds.html
+++ b/app/templates/mutualFunds.html
@@ -2,13 +2,29 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block content %}
-<table>
+
+<div class="container">
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+        {% for message in messages %}
+        <div class="alert alert-info" role="alert">{{ message }}</div>
+        {% endfor %}
+    {% endif %}
+    {% endwith %}
+
+    {# application content needs to be provided in the app_content block #}
+    {% block app_content %}{% endblock %}
+</div>
+
+<div class="table-responsive" >
+<table class="table">
     <thead>
         <tr>
             <th>  ID  </th>
             <th>  name  </th>
             <th>  dollars  </th>
             <th>  total_mf_sector  </th>
+            <th>  Edit/Delete  </th>
         </tr>
     </thead>
     <tbody>
@@ -17,20 +33,28 @@
             <tr>
                 <td>{{  row.id  }}</td>
                 <td>{{  row.name  }}</td>
-                <td>{{  row.dollars  }}</td>
+                <td>${{  row.dollars  }}</td>
                 <td>{{  row.total_mf_sector  }}%</td>
+                <td>
+                    <a href="{{url_for('editMutualFunds', id=row.id)}}">
+                        <button type="button">  Edit  </button></a>
+                    <a href="{{url_for('deleteMutualFunds', id=row.id)}}">
+                        <button type="button">  Delete  </button></a>
+                </td>
             </tr>
         {% endfor %}
         {% endif %}
     </tbody>
 </table>
+</div>
 
 {% if grow%}
-<h2>Add Mutual Funds</h2>
+<h3>Add Mutual Funds</h3>
 <div class="row">
     <div class="col-md-4">
-        {{ wtf.quick_form(form) }}
+        {{ wtf.quick_form(add_form) }}
     </div>
 </div>
 {% endif %}
+
 {% endblock %}
