--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,13 +17,13 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="{{ url_for('index') }}">{{ ('Home') }}</a></li>
                     <li><a href="{{ url_for('mutualFunds') }}">{{ ('Mutual Funds') }}</a></li>
                     <li><a href="{{ url_for('view_stocks') }}">{{ ('Stocks') }}</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if current_user.is_anonymous %}
                     <li><a href="{{ url_for('login') }}">{{ ('Login') }}</a></li>
+                    <li><a href="{{ url_for('register') }}">{{ ('Register') }}</a></li>
                     {% else %}
                     <li><a href="{{ url_for('logout') }}">{{ ('Logout') }}</a></li>
                     {% endif %}
