--- a/app/templates/addtoHoldings.html
+++ b/app/templates/addtoHoldings.html
@@ -25,13 +25,11 @@
             <th>  legal_name  </th>
             <th>  total_shares  </th>
             <th>  current_price  </th>
-            <th>  Mutual Fund ID  </th>
-            <th>  Edit/Delete  </th>
-            <th>  Add  </th>
+            <th>  Add to Mutual Fund  </th>
         </tr>
     </thead>
-    <tbody> 
-        {% if data%}
+    <tbody>
+        {% if data %} 
         {% for row in results %}
             <tr>
                 <td>{{  row.id  }}</td>
@@ -39,15 +37,8 @@
                 <td>{{  row.legal_name  }}</td>
                 <td>{{  row.total_shares  }}</td>
                 <td>${{  row.current_price  }}</td>
-                <td>{{  row.mutual_funds_id  }}</td>
-                <td> 
-                    <a href="{{url_for('editStocks', id=row.id)}}">
-                        <button type="button">  Edit  </button></a>
-                    <a href="{{url_for('deleteStocks', id=row.id)}}">
-                        <button type="button">  Delete  </button></a>
-                </td>
                 <td>
-                    <a href="{{url_for('addHoldings', id=row.id)}}">
+                    <a href="{{url_for('addHoldings', id=row.id, pid=pid)}}">
                         <button type="button">  Add  </button></a>
                 </td>
             </tr>
@@ -56,14 +47,5 @@
     </tbody>
 </table>
 </div>
-
-{% if grow%}
-<h3>Add Stock</h3>
-<div class="row">
-    <div class="col-md-4">
-        {{ wtf.quick_form(form) }}
-    </div>
-</div>
-{% endif %}
 
 {% endblock %}
