--- a/app/templates/addtoHoldings.html
+++ b/app/templates/addtoHoldings.html
@@ -38,7 +38,7 @@
                 <td>{{  row.total_shares  }}</td>
                 <td>${{  row.current_price  }}</td>
                 <td>
-                    <a href="{{url_for('addHoldings', id=row.id, pid=pid)}}">
+                    <a href="{{url_for('addtoHoldings', id=row.id, pid=pid)}}">
                         <button type="button">  Add  </button></a>
                 </td>
             </tr>
