Update models, routes

--- a/app/templates/test.html
+++ b/app/templates/test.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 {% for result in results %}
-<div><p>{{result}}</p></div>
+<div><p>{{result.id}} {{result}}</p></div>
 {% endfor %}
 
 {% endblock %}
