--- a/app/templates/mutualFunds.html
+++ b/app/templates/mutualFunds.html
@@ -74,7 +74,7 @@
             {% for row in Mresults %}
                 <tr>
                     <td>{{  row.id  }}</td>
-                    <td>{{  row.ticket_symbol  }}</td>
+                    <td>{{  row.ticker_symbol  }}</td>
                     <td>${{  row.legal_name  }}</td>
                     <td>{{  row.total_shares  }}%</td>
                     <td>{{  row.current_price  }}%</td>
