--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,6 +19,8 @@
                 <ul class="nav navbar-nav">
                     <li><a href="{{ url_for('mutualFunds') }}">{{ ('Mutual Funds') }}</a></li>
                     <li><a href="{{ url_for('view_stocks') }}">{{ ('Stocks') }}</a></li>
+                    <li><a href="{{ url_for('sectors') }}">{{ ('Sectors') }}</a></li>
+                    <li><a href="{{ url_for('graphSectors') }}">{{ ('graphSectors') }}</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if current_user.is_anonymous %}
