--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,7 +20,9 @@
                     <li><a href="{{ url_for('mutualFunds') }}">{{ ('Mutual Funds') }}</a></li>
                     <li><a href="{{ url_for('view_stocks') }}">{{ ('Stocks') }}</a></li>
                     <li><a href="{{ url_for('sectors') }}">{{ ('Sectors') }}</a></li>
-                    <li><a href="{{ url_for('graphSectors') }}">{{ ('graphSectors') }}</a></li>
+                    <li><a href="{{ url_for('admin') }}">{{ ('Admin') }}</a></li>
+                    <li><a href="{{ url_for('viewPortfolioHoldings') }}">{{ ('Portfolio Holdings') }}</a></li>
+                    <!-- <li><a href="{{ url_for('graphSectors') }}">{{ ('graphSectors') }}</a></li> -->
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if current_user.is_anonymous %}
