--- a/app/templates/mutualFunds.html
+++ b/app/templates/mutualFunds.html
@@ -15,51 +15,58 @@
     {# application content needs to be provided in the app_content block #}
     {% block app_content %}{% endblock %}
 </div>
-
 <div class="table-responsive" >
-<table class="table">
-    <thead>
-        <tr>
-            <th>  ID  </th>
-            <th>  name  </th>
-            <th>  dollars  </th>
-            <th>  total_mf_sector  </th>
-            <th>  portfolio id  </th>
-            <th>  Edit/Delete  </th>
-            <th>  Stocks  </th>
-            <th>  Current Fund Price  </th>
-        </tr>
-    </thead>
-    <tbody>
-        {% if data%} 
-        {% for row in results %}
+    <table class="table">
+        <thead>
+            <caption>  Mutual Funds  </caption>
             <tr>
-                <td>{{  row.id  }}</td>
-                <td>{{  row.name  }}</td>
-                <td>${{  row.dollars  }}</td>
-                <td>{{  row.total_mf_sector  }}%</td>
-                <td> {{  row.portfolio_id  }} </td>
-                <td>
-                    <a href="{{url_for('editMutualFunds', id=row.id)}}">
-                        <button type="button">  Edit  </button></a>
-                    <a href="{{url_for('deleteMutualFunds', id=row.id)}}">
-                        <button type="button">  Delete  </button></a>
-                </td>
-                <td>
-                    <a href="{{url_for('viewHoldings', id=row.id)}}">
-                        <button type="button">View</button></a>
-                    <a href="{{url_for('addHoldings', id=row.id)}}">
-                        <button type="button">Add</button></a>
-                </td>
-                <td>  
-                    <a href="{{url_for('currentFundPrice', id=row.id)}}">
-                        <button type="button">CFP</button></a>
-                </td>
+                <th>  ID  </th>
+                <th>  name  </th>
+                <th>  initial_investment_amt  </th>
+                <th>  dollars_available  </th>
+                <th>  dollars_invested  </th>
+                <th>  mf_share_price  </th>
+                <th>  total_mf_sector  </th>
+                <th>  portfolio id  </th>
+                <th>  Edit/Delete  </th> 
+                <th>  Stocks  </th>
+                <th>  Current Fund Price  </th>
+               
             </tr>
-        {% endfor %}
-        {% endif %}
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            {% if data%} 
+            {% for mf_row in mf_results %}
+                <tr>
+                    <td>{{  mf_row.id  }}</td>
+                    <td>{{  mf_row.name  }}</td>
+                    <td>${{  mf_row.initial_investment_amt  }}</td>
+                    <td>${{  mf_row.dollars_available  }}</td>
+                    <td>${{  mf_row.dollars_invested  }}</td>
+                    <td>${{  mf_row.mf_share_price  }}</td>
+                    <td>{{  mf_row.total_mf_sector  }}%</td>
+                    <td> {{  mf_row.portfolio_id  }} </td>
+                    <td>
+                        <a href="{{url_for('editMutualFunds', id=mf_row.id)}}">
+                            <button type="button">  Edit  </button></a>
+                        <a href="{{url_for('deleteMutualFunds', id=mf_row.id)}}">
+                            <button type="button">  Delete  </button></a>
+                    </td>
+                    <td>
+                        <a href="{{url_for('viewHoldings', id=mf_row.id)}}">
+                            <button type="button">View</button></a>
+                        <a href="{{url_for('addHoldings', id=mf_row.id)}}">
+                            <button type="button">Add</button></a>
+                    </td>
+                    <td>  
+                        <a href="{{url_for('currentFundPrice', id=mf_row.id)}}">
+                            <button type="button">CFP</button></a>
+                    </td>
+                </tr>
+            {% endfor %}
+            {% endif %}
+        </tbody>
+    </table>
 </div>
 
 {% if view %}
