--- a/app/templates/sectors.html
+++ b/app/templates/sectors.html
@@ -3,41 +3,36 @@
 
 {% block content %}
 <div class="table-responsive" >
-<table class="table">
-    <thead>
-        <tr>
-            <th>  id  </th>
-            <th>  name  </th>
-            <th>  legal_name  </th>
-            <th>  total_shares  </th>
-            <th>  current_price  </th>
-            <th>  Edit/Delete  </th>
-        </tr>
-    </thead>
-    <tbody> 
-        {% if data%}
-        {% for row in results %}
+    <table class="table">
+        <thead>
             <tr>
-                <td>{{  row.id  }}</td>
-                <td>{{  row.ticker_symbol  }}</td>
-                <td>{{  row.legal_name  }}</td>
-                <td>{{  row.total_shares  }}</td>
-                <td>${{  row.current_price  }}</td>
-                <td> 
-                    <a href="{{url_for('editStocks', id=row.id)}}">
-                        <button type="button">  Edit  </button></a>
-                    <a href="{{url_for('deleteStocks', id=row.id)}}">
-                        <button type="button">  Delete  </button></a>
-                </td>
+                <th>  id  </th>
+                <th>  name  </th>
+                <th>  Edit/Delete  </th>
             </tr>
-        {% endfor %}
-        {% endif %}
-    </tbody>
-</table>
-</div>
+        </thead>
+        <tbody> 
+            {% if sector_data%}
+            {% for sect_row in sector_results %}
+                <tr>
+                    <td>{{  sect_row.id  }}</td>
+                    <td>{{  sect_row.name  }}</td>
+                    <td> 
+                        <a href="{{url_for('editStocks', id=sect_row.id)}}">
+                            <button type="button">  Edit  </button></a>
+                        <a href="{{url_for('deleteStocks', id=sect_row.id)}}">
+                            <button type="button">  Delete  </button></a>
+                    </td>
+                    
+                </tr>
+            {% endfor %}
+            {% endif %}
+        </tbody>
+    </table>
+    </div>
 
 {% if grow%}
-<h3>Add Stock</h3>
+<h3>Add Sector</h3>
 <div class="row">
     <div class="col-md-4">
         {{ wtf.quick_form(form) }}
