--- a/app/templates/mutualFunds.html
+++ b/app/templates/mutualFunds.html
@@ -74,22 +74,28 @@
     <table class="table">
         <thead>
             <tr>
-                <th>  ID  </th>
-                <th>  ticker symbol  </th>
-                <th>  legal name  </th>
-                <th>  total shares  </th>
-                <th>  current price  </th>
+                <th>  id  </th>
+                <th>  ticker_symbol  </th>
+                <th>  legal_name  </th>
+                <th>  total_shares_circulation  </th>
+                <th>  total_shares_available  </th>
+                <th>  initial_price  </th>
+                <th>  current_price  </th>
+                <th>  sector  </th>
             </tr>
         </thead>
         <tbody>
             {% if data %} 
-            {% for row in Mresults %}
+            {% for s_row in Mresults %}
                 <tr>
-                    <td>{{  row.id  }}</td>
-                    <td>{{  row.ticker_symbol  }}</td>
-                    <td>${{  row.legal_name  }}</td>
-                    <td>{{  row.total_shares  }}%</td>
-                    <td>{{  row.current_price  }}%</td>
+                    <td>{{  s_row.id  }}</td>
+                    <td>{{  s_row.ticker_symbol  }}</td>
+                    <td>{{  s_row.legal_name  }}</td>
+                    <td>{{  s_row.total_shares_circulation  }}</td>
+                    <td>{{  s_row.total_shares_available  }}</td>
+                    <td>{{  s_row.initial_price  }}</td>
+                    <td>${{ s_row.current_price  }}</td>
+                    <td>{{  s_row.sector_id  }}</td>
                 </tr>
             {% endfor %}
             {% endif %}
