--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -4,6 +4,13 @@
 
 {% block app_content %}
 
+<h3>Search Users</h3>
+<div class="row">
+    <div class="col-md-4">
+        {{ wtf.quick_form(form) }}
+    </div>
+</div>
+
 <!-- User Table -->
 <div class="table-responsive" >
     <table class="table">
